forgejo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: git
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/instance: forgejo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/instance: forgejo
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: forgejo
          image: code.forgejo.org/forgejo/forgejo:14.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 22
          volumeMounts:
            - name: data-storage
              mountPath: /data
          resources:
            limits:
              cpu: "2"
              memory: "4Gi"
            requests:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: forgejo-local
