forgejo/service-ssh.yml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: git
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
spec:
  type: ClusterIP
  ports:
    - name: "22"
      port: 22
      targetPort: 22
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
