forgejo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-http
  namespace: git
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
spec:
  type: ClusterIP
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
